# pltest

./: .gitignore  LICENSE  README.md  flake.nix  flaker.cabal  hie.yaml  pltest.cabal  test.cpp
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa
.direnv/flake-inputs/: pccsnlrwvnylqw562irp3pqap9sinn2l-source  q14qczda2pqjiy8c4g274sz305z1mgpw-source
src/: Main.hs
